--- a/css/solutions.css
+++ b/css/solutions.css
@@ -12,3 +12,14 @@
 }
 
 /* eser 3 solution */
+.ex-3-square:hover{
+  border-radius: 50%;
+  transition: 0.5s ease;
+}
+
+/* eser 4 solution */
+.ex-4-square:hover{
+  opacity: 0;
+  transition: 1s ease;
+}
+
