--- a/css/solutions.css
+++ b/css/solutions.css
@@ -23,3 +23,20 @@
   transition: 1s ease;
 }
 
+/* eser 5 solution */
+.ex-5-square:hover{
+  transform: scale(2);
+  transition: 1s;
+}
+.ex-5-square:active{
+  transform: scale(0.5);
+  transition: 1s;
+}
+
+/* eser 6 solution */
+.ex-6-img:hover{
+  filter: grayscale(1);
+}
+
+
+
