--- a/css/solutions.css
+++ b/css/solutions.css
@@ -68,7 +68,7 @@
 }
 @keyframes rotate {
   0% {
-      transform: rotate(1turn);
+    transform: rotate(1turn);
   }
 }
 
@@ -81,7 +81,7 @@
     transform: rotate(0.75turn);
   }
   100% {
-      transform: rotate(0);
+    transform: rotate(0);
   }
 }
 
@@ -91,13 +91,13 @@
 }
 @keyframes button1top {
   0% {
-      left: 10%;
+    left: 10%;
   }
   50% {
-      left: 65%;
+    left: 65%;
   }
   100% {
-      left: 10%;
+    left: 10%;
   }
 }
 .ex-12-button:hover .ex-12-bottom-white {
@@ -105,14 +105,74 @@
 }
 @keyframes button1bottom {
   0% {
-      right: 20%;
+    right: 20%;
   }
   50% {
-      right: 65%;
+    right: 65%;
   }
   100% {
-      right: 20%;
+    right: 20%;
   }
+}
+
+/* eser 13 solution */
+.ex-13-button:hover .ex-13-top-white {
+  animation: button2toptotal 2s linear;
+}
+@keyframes button2toptotal {
+  0% {
+    left: 10%;
+    top: -10px;
+}
+30% {
+    left: calc(100% - 30px);
+    top: -10px;
+}
+45% {
+    left: calc(100% - 30px);
+    top: 100%;
+}
+75% {
+    left: 0;
+    top: 100%;
+}
+90% {
+    left: -15px;
+    top: -10px;
+}
+100% {
+    left: 10%;
+    top: -10px;
+}
+}
+.ex-13-button:hover .ex-13-bottom-white {
+  animation: button2bottomtotal 2s linear;
+}
+@keyframes button2bottomtotal {
+  0% {
+    bottom: -10px;
+    right: 20%;
+}
+30% {
+    right: calc(100% - 30px);
+    bottom: -10px;
+}
+45% {
+    right: calc(100% - 30px);
+    bottom: 100%;
+}
+75% {
+    right: 0;
+    bottom: 100%;
+}
+90% {
+    right: -15px;
+    bottom: -10px;
+}
+100% {
+    bottom: -10px;
+    right: 20%;
+}
 }
 
 
